--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ms-auto ">
+            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item">
+              <a href="#explore" class="nav-link"> Explore</a>
+            </li>
+            <li class="nav-item">
+              <a href="#create" class="nav-link">Create</a>
+            </li>
+            <li class="nav-item">
+              <a href="#share" class="nav-link">Share</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
 
