home section Added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/d6ef0c3764.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Lovely Book</title>
   </head>
@@ -32,7 +36,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav ms-auto ">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
             <li class="nav-item">
               <a href="#explore" class="nav-link"> Explore</a>
@@ -48,6 +52,82 @@
       </div>
     </nav>
 
+    <!-- Header Sections -->
+    <header id="home">
+      <div class="dark-overlay">
+        <div class="container d-grid">
+          <div class="row homeContent justify-content-md-center">
+            <div class="col-md-8 d-none d-md-block">
+              <h1 class="display-4">
+                Build <strong>social profile</strong> and gain revenue
+                <strong>profits</strong>
+              </h1>
+
+              <div>
+                <i class="fas fa-check-square fa-2x p-4"></i>
+                <span
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Blanditiis, nisi.Blanditiis, nisi.</span
+                >
+              </div>
+              <div>
+                <i class="fas fa-check-square fa-2x p-4"></i>
+                <span
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Blanditiis, nisi.Blanditiis, nisi.</span
+                >
+              </div>
+              <div>
+                <i class="fas fa-check-square fa-2x p-4"></i>
+                <span class="homeText"
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Blanditiis, nisi. Blanditiis, nisi.</span
+                >
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="bg-primary card text-center card-form">
+                <div class="card-body">
+                  <h2 class="card-title">Sign Up Today</h2>
+                  <p class="card-text">Please fill out this form to register</p>
+                  <form>
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        placeholder="username"
+                        class=" form-control form-control-lg mb-2"
+                      />
+                      <input
+                        type="email"
+                        placeholder="Email"
+                        class="form-control form-control-lg mb-2"
+                      />
+
+                      <input
+                        type="password"
+                        placeholder="password"
+                        class="form-control form-control-lg mb-2"
+                      />
+                      <input
+                        type="password"
+                        placeholder=" Confirm Password"
+                        class="form-control form-control-lg mb-2"
+                      />
+                      <div class="d-grid mb-2">
+                        <button type="submit" class="btn btn-outline-light form-control form-control-lg">
+                          Submit
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
