--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                       <input
                         type="text"
                         placeholder="username"
-                        class=" form-control form-control-lg mb-2"
+                        class="form-control form-control-lg mb-2"
                       />
                       <input
                         type="email"
@@ -115,7 +115,13 @@
                         class="form-control form-control-lg mb-2"
                       />
                       <div class="d-grid mb-2">
-                        <button type="submit" class="btn btn-outline-light form-control form-control-lg">
+                        <button
+                          type="submit"
+                          class="
+                            btn btn-outline-light
+                            form-control form-control-lg
+                          "
+                        >
                           Submit
                         </button>
                       </div>
@@ -128,6 +134,172 @@
         </div>
       </div>
     </header>
+
+    <section id="exploreHeadSection">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-5">Explore</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, illo. Eum quidem id, cupiditate perferendis impedit
+              inventore minus at vel.
+            </p>
+            <button class="btn btn-outline-light">Find out more</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="exploreMainSection" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/explore-section1.jpg"
+              class="exploreImage img-fluid w-75 mb-3"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="expolreContent">
+              <h1 class="display-6">Explore & Connect</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                similique, laboriosam deserunt natus nemo debitis quaerat soluta
+                quo vel quam amet, est possimus?
+              </p>
+              <div class="d-none d-lg-block">
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="exploreHeadSection " class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-5">Explore</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, illo. Eum quidem id, cupiditate perferendis impedit
+              inventore minus at vel.
+            </p>
+            <button class="btn btn-outline-light">Find out more</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="exploreMainSection" class="bg-dark py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="expolreContent">
+              <h1 class="display-6">Explore & Connect</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                similique, laboriosam deserunt natus nemo debitis quaerat soluta
+                quo vel quam amet, est possimus?
+              </p>
+              <div class="d-none d-lg-block">
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <img
+              src="img/create-section1.jpg"
+              class="exploreImage img-fluid w-75 mb-3  float-lg-end"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="exploreHeadSection " class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-5">Explore</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur, illo. Eum quidem id, cupiditate perferendis impedit
+              inventore minus at vel.
+            </p>
+            <button class="btn btn-outline-light">Find out more</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="exploreMainSection" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/share-section1.jpg"
+              class="exploreImage img-fluid w-75 mb-3"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="expolreContent">
+              <h1 class="display-6">Explore & Connect</h1>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
+                similique, laboriosam deserunt natus nemo debitis quaerat soluta
+                quo vel quam amet, est possimus?
+              </p>
+              <div class="d-none d-lg-block">
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+                <div>
+                  <i class="fas fa-check-square fa-2x p-4"></i>
+                  <span
+                    >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Quis.</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
