--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       src="https://kit.fontawesome.com/d6ef0c3764.js"
       crossorigin="anonymous"
     ></script>
+
+
+
+    <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="styles.css" />
     <title>Lovely Book</title>
   </head>
@@ -194,7 +198,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center py-5">
-            <h1 class="display-5">Explore</h1>
+            <h1 class="display-5">Create</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consequuntur, illo. Eum quidem id, cupiditate perferendis impedit
@@ -211,7 +215,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="expolreContent">
-              <h1 class="display-6">Explore & Connect</h1>
+              <h1 class="display-6">Create Your Passion</h1>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
                 similique, laboriosam deserunt natus nemo debitis quaerat soluta
@@ -239,7 +243,7 @@
           <div class="col-md-6">
             <img
               src="img/create-section1.jpg"
-              class="exploreImage img-fluid w-75 mb-3  float-lg-end"
+              class="exploreImage img-fluid w-75 mb-3 float-lg-end"
             />
           </div>
         </div>
@@ -249,7 +253,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center py-5">
-            <h1 class="display-5">Explore</h1>
+            <h1 class="display-5">Share</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consequuntur, illo. Eum quidem id, cupiditate perferendis impedit
@@ -272,7 +276,7 @@
           </div>
           <div class="col-md-6">
             <div class="expolreContent">
-              <h1 class="display-6">Explore & Connect</h1>
+              <h1 class="display-6">Share What You Create</h1>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. A
                 similique, laboriosam deserunt natus nemo debitis quaerat soluta
@@ -299,6 +303,15 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-dark text-center p-3">
+      <div class="container">
+        <div class="col">
+          <h2 class="display-6">Lovely Book</h2>
+          <p>copyright <span id="year"> 2021</span></p>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
